# mine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  common.mk  compile_commands.json  config.mk
.cache/clangd/index/: config-test.cpp.5DD128B571DA7717.idx  config.cpp.FB9B39E2DE51C481.idx  config.h.E4E08B0096539439.idx  strproc.cpp.C2E1ED8538F39225.idx  strproc.h.4FF4A71DC5F00235.idx
helper/: CMakeLists.txt  Makefile  cmake_install.cmake  config.cpp  strproc.cpp
include/: config.h  daemonize.h  global.h  log.h  mine_signal.h  mine_thread.h  mutex.h  noncopyable.h  process_cycle.h  singleton.h  strproc.h  types.h
process/: CMakeLists.txt  daemonize.cpp  mine_thread.cpp  process_cycle.cpp
server/: CMakeLists.txt  log.cpp  mine_signal.cpp  server.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  config-test.cpp  log-test.cpp  signal-test.cpp  thread-test.cpp
